# ImEditor

./: .gitignore  CMakeLists.txt  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Settings.tsx  index.css  welcomeScreen.tsx
scripts/: embed_codicon.ps1  embed_font.ps1  embed_frontend.ps1  embed_monaco.ps1
src/: EditorState.cpp  EditorState.h  editor.cpp  editor.h  main.cpp
src/core/: AppPaths.cpp  AppPaths.h
src/ui/: DrawBottomBar.cpp  DrawCodeEditor.cpp  DrawExplorer.cpp  DrawSideBar.cpp  DrawTabBar.cpp  ui.h
src/ui/components/: SideBarButton.cpp  components.h  tabs.cpp
src/web/: MonacoHost.cpp  MonacoHost.h  WebViewHost.cpp  WebViewHost.h  html.h
src/windows/: app.cpp  app.h
src/windows/dx11/: dx11_window.cpp  dx11_window.h
